--- a/META.yml
+++ b/META.yml
@@ -1,26 +1,26 @@
 --- #YAML:1.0
 name: DateTime-Calendar-Chinese
-version: 0.04
+version: 0.05
 author:
-  - Daisuke Maki E<lt>daisuke@cpan.orgE<gt>
+  - |-
+    (c) Copyright 2004-2005 Daisuke Maki E<lt>daisuke@cpan.orgE<gt>.
+    All rights reserved.
 abstract: Traditional Chinese Calendar Implementation
 license: perl
 requires:
   DateTime: 0
-  DateTime::Event::Chinese: 0.02
-  DateTime::Event::Lunar: 0
-  DateTime::Event::SolarTerm: 0.02
-  DateTime::Util::Astro::Common: 0
-  DateTime::Util::Astro::Moon: 0
-  DateTime::Util::Calc: 0
+  DateTime::Event::Chinese: '>= 0.04'
+  DateTime::Event::Lunar: '>= 0.04'
+  DateTime::Event::SolarTerm: '>= 0.04'
+  DateTime::Util::Astro::Common: '>= 0.02'
+  DateTime::Util::Astro::Moon: '>= 0.04'
+  DateTime::Util::Calc: '>= 0.08'
   Math::Round: 0
   Params::Validate: 0
 recommends:
   perl: 5.6.1
-build_requires: {}
-conflicts: {}
 provides:
   DateTime::Calendar::Chinese:
     file: lib/DateTime/Calendar/Chinese.pm
-    version: 0.04
-generated_by: Module::Build version 0.22
+    version: 0.05
+generated_by: Module::Build version 0.2607
