--- a/META.yml
+++ b/META.yml
@@ -1,19 +1,26 @@
---- 
-abstract: Traditional Chinese Calendar Implementation
-author: (c) Copyright 2004-2007 Daisuke Maki <daisuke@endeworks.jp>.
+---
+abstract: 'Traditional Chinese Calendar Implementation'
+author:
+  - '(c) Copyright 2004-2007 Daisuke Maki <daisuke@endeworks.jp>.'
+build_requires:
+  ExtUtils::MakeMaker: 6.42
+configure_requires:
+  ExtUtils::MakeMaker: 6.42
 distribution_type: module
-generated_by: Module::Install version 0.67
+generated_by: 'Module::Install version 1.00'
 license: perl
-meta-spec: 
-  url: http://module-build.sourceforge.net/META-spec-v1.3.html
-  version: 1.3
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
 name: DateTime-Calendar-Chinese
-no_index: 
-  directory: 
+no_index:
+  directory:
     - inc
     - t
-requires: 
-  DateTime::Event::Chinese: 0.05
-  Math::Round: 0
-  Params::Validate: 0
-version: 0.07
+    - xt
+requires:
+  DateTime::Event::Chinese: 0.99000
+  perl: 5.8.0
+resources:
+  license: http://dev.perl.org/licenses/
+version: 0.99999
