--- a/META.yml
+++ b/META.yml
@@ -7,7 +7,7 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: 6.42
 distribution_type: module
-generated_by: 'Module::Install version 1.00'
+generated_by: 'Module::Install version 1.01'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -19,8 +19,9 @@ no_index:
     - t
     - xt
 requires:
-  DateTime::Event::Chinese: 0.99000
+  DateTime::Event::Chinese: 1.00
   perl: 5.8.0
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.99999
+  repository: git://github.com/lestrrat/DateTime-Calendar-Chinese.git
+version: 1.00
